Fixed styling and test

--- a/src/templates/resourcesstartedlastweek.vm
+++ b/src/templates/resourcesstartedlastweek.vm
@@ -1,5 +1,5 @@
 <div style="font-family:'arial'">
-    <div style="overflow-x:auto;width:1000px;border:1px solid #ddd">
+    <div style="overflow-x:auto;width:100%;border:1px solid #ddd">
         <table style="border-collapse:collapse;border-spacing:0;width:100%;font-size:small">
             <thead>
             <tr>
@@ -11,20 +11,26 @@
             </tr>
             </thead>
             <tbody>
+            #set($style = "true")
             #foreach( $resource in $resources)
+            #if($style == "true")
             <tr style="background-color:#f2f2f2">
+            #else
+            <tr>
+            #end
                 <td nowrap style="border:1px solid #ddd;padding:8px;">$resource.getAccountId()</td>
                 <td nowrap style="border:1px solid #ddd;padding:8px;">$resource.getProductName()</td>
                 <td nowrap style="border:1px solid #ddd;padding:8px;">$resource.getResourceId()</td>
                 <td nowrap style="border:1px solid #ddd;padding:8px;">$dateFormat.format($resource.getStartDate().getTime())</td>
                 <td nowrap style="border:1px solid #ddd;padding:8px;">$decimalFormatter.format($resource.getCost(), 2)</td>
             </tr>
+            #set($style = !$style)
             #end##
             </tbody>
             <tfoot>
             <tr>
                 <td style="border:1px solid #ddd;padding:8px;background-color:#428aff" colspan="5">
-                    Total: $decimalFormatter.format($total, 2)
+                    Total: $$decimalFormatter.format($total, 2)
                 </td>
             </tr>
             </tfoot>
